...
        🍕 \(name)
           Размер: \(size)см | Тесто: \(pastry) | \(spicy ? "Острое" : "Оригинальное")
           Цена: \(String(format: "%.2f", price)) BYN
        """
    }

    override var categoryName: String { "Пицца" }
    //override var imageName: String { "🍕" }
}

// MARK: - Burger
class Burger: Dish {
    var cheese: Bool
...
        🍔 \(name)
           Добавки: \(toppings.isEmpty ? "без добавок" : toppings.joined(separator: ", "))
           Цена: \(String(format: "%.2f", price)) BYN
        """
    }

    override var categoryName: String { "Бургеры" }
    //override var imageName: String { "🍔" }
}

// MARK: - Snack
class Snack: Dish {
    var size: String  // "Большая", "Средняя", "Маленькая"
...
